--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,31 @@
+/* Home.module.css */
 .main {
+  min-height: 100vh;
+  min-width: 110vw;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  justify-content: center;
+  position: relative;
+  color: #fff;
+}
+
+.background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("/background.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  filter: blur(4px);
+  z-index: -1;
+}
+
+.content {
+  z-index: 1;
 }
 
 .description {
